--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_deploy:
   - npm run build
 deploy:
   provider: script
-  script: netlify deploy -s $NETLIFY_SITE_ID -d $NETLIFY_ACCESS_TOKEN -d ./build
+  script: netlify deploy -s $NETLIFY_SITE_ID -a $NETLIFY_ACCESS_TOKEN -d ./build
   skip_cleanup: true
   on:
     branch: master
