--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/icons": "^3.3.0",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.11",
     "@types/react": "16.7.11",
     "@types/react-dom": "16.0.11",
+    "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "styled-components": "^4.1.2",
     "typescript": "3.2.1"
   },
   "scripts": {
@@ -26,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/styled-components": "^4.1.3"
+  }
 }
