--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/icons": "^3.3.0",
-    "@types/jest": "23.3.10",
-    "@types/node": "10.12.11",
-    "@types/react": "16.7.11",
-    "@types/react-dom": "16.0.11",
+    "@types/lodash": "^4.14.118",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.1.2",
     "typescript": "3.2.1"
   },
   "scripts": {
@@ -31,6 +31,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/styled-components": "^4.1.3"
+    "@types/classnames": "^2.2.6",
+    "@types/history": "^4.7.2",
+    "@types/jest": "23.3.10",
+    "@types/node": "10.12.11",
+    "@types/react": "16.7.12",
+    "@types/react-dom": "16.0.9",
+    "node-sass": "^4.10.0"
   }
 }
