--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/lodash": "^4.14.118",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
