--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.29.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
@@ -33,11 +35,11 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/enzyme": "^3.1.15",
     "@types/history": "^4.7.2",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.11",
     "@types/react": "16.7.12",
-    "@types/react-dom": "16.0.9",
-    "node-sass": "^4.10.0"
+    "@types/react-dom": "16.0.9"
   }
 }
