--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@types/lodash": "^4.14.118",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
-    "date-fns": "^1.29.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "normalize.css": "^8.0.1",
     "react": "16.6.0",
     "react-dom": "16.6.0",
