--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "google-map-react": "^1.1.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "node-sass": "^4.10.0",
     "normalize.css": "^8.0.1",
     "react": "16.6.0",
     "react-dom": "16.6.0",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.15",
+    "@types/google-map-react": "^0.23.10",
     "@types/history": "^4.7.2",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.11",
